--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "morgan": "~1.4.1",
     "nodemailer": "~1.3.0",
     "swig": "~1.4.1",
-    "underscore": "^1.8.2"
-  },
-  "devDependencies": {
+    "underscore": "^1.8.2",
+
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "~1.0.0",
     "grunt-contrib-concat": "^0.5.1",
@@ -50,18 +49,20 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-cssjanus": "^0.2.2",
     "grunt-env": "~0.4.1",
-    "grunt-karma": "~0.9.0",
     "grunt-ng-annotate": "~0.4.0",
     "grunt-ngdocs": "^0.2.7",
     "grunt-node-inspector": "~0.1.3",
     "grunt-nodemon": "~0.3.0",
+    "load-grunt-tasks": "~1.0.0"
+  },
+  "devDependencies": {
+    "grunt-karma": "~0.9.0",
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-coverage": "~0.2.0",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.2.1",
     "karma-phantomjs-launcher": "~0.1.2",
-    "load-grunt-tasks": "~1.0.0",
     "should": "~4.1.0",
     "supertest": "~0.14.0"
   }
